<resources>
    <string name="app_name">Music Beatz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mere_sapne_kaha_song">Mere Sapne kaha song</string>
    <string name="song_details">Song Details</string>
    <string name="_00_00">00:00</string>
    <string name="music_list">Music List</string>
    <string name="folder_list">Folder List</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_list">Play List</string>
    <string name="hum_tum_kya_thum_that_one">Hum Tum Kya Thum That One</string>
    <string name="favourites">Favourites</string>
    <string name="audio_list">Audio List</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="world_of_music">World Of Music</string>
    <string name="item_1">Item 1</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="image">image</string>
    <string name="your_name">Your Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>
    <string name="playing_audio">playing Audio</string>
    <string name="source_document_of_this_app_n_from_github_click_icon_below">Source Document Of This app\n From Github click Icon Below</string>
</resources>