<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/black"
    tools:context=".view.AudioListFragment">

    <LinearLayout
        android:id="@+id/mainScreenFragmentAudioID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/suffleBtnID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_suffle"
                    app:tint="@color/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/shuffle"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favouriteBtnID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_favourite"
                    app:tint="@color/redpic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Favourite"
                    android:textColor="@color/redpic"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playListBtnID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_playlist"
                    app:tint="@color/lightyellow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/play_list"
                    android:textColor="@color/lightyellow"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="#131313"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/audioListBtnIDsAudioList"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_music"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/audio_list"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/folderListBtnIDsAudioList"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_folder"
                    app:tint="@color/lightyellow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/folder_list"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListMusicID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:background="@color/black"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navDrawerViewID"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:background="@color/black"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/white"
        app:itemIconSize="30dp"
        app:itemTextColor="@color/white"
        app:menu="@menu/nav_menu"
        />


</androidx.drawerlayout.widget.DrawerLayout>