<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.PlayingAudioFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/playingHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/backbuttonIDFavouriteFragment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back"
                app:tint="@color/redpic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:padding="5dp"
                android:text="@string/playing_audio"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:id="@+id/favouriteIDFavouriteFragment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_favourite"
                    app:tint="@color/redpic" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/musicLogoID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playingHeading"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"

                app:cardCornerRadius="35dp">

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/imageIconID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/musicbeatslogo" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/songNameIdFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/musicLogoID"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/hum_tum_kya_thum_that_one"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/sectionControllerIDLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/songNameIdFull"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/previousBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back"
                app:tint="@color/redpic" />

            <ImageView
                android:id="@+id/playOrPause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_play"
                app:tint="@color/redpic" />

            <ImageView
                android:id="@+id/nextBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_forward"
                app:tint="@color/redpic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressDetailesID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sectionControllerIDLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/startingTimerID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ProgressBar

                android:id="@+id/pBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:indeterminate="true"
                android:max="100"
                android:minWidth="250dp"
                android:minHeight="50dp"
                android:progress="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/endingTimerID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_repeat"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:src="@drawable/ic_share"
                app:tint="@color/white" />
        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>